Finish to clean accountize process and add better translation of sale_payment and purchase_payment in French
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1538 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -136,6 +136,7 @@ eng:
         #>account_balances: 'Balances de compte'
         #>accounts: 'Comptes'
         #>areas: 'Zones postales'
+        #>attorney_accounts: '(((ATTORNEY_ACCOUNTS)))'
         #>available_prices: 'Prix disponibles'
         #>available_products: 'Produits disponibles'
         #>bank_journals: 'Journaux de banque'
@@ -143,7 +144,7 @@ eng:
         #>banks_accounts: 'Comptes comptables de banque'
         #>born_on: 'Créée le'
         #>cash_journals: 'Journaux de caisse'
-        #>cashes: 'Comptes de trésorerie'
+        #>cashes: 'Trésoreries'
         #>cashes_accounts: 'Comptes de caisse'
         #>charges_accounts: 'Comptes de charge'
         #>choice_complements: 'Chmaps complémentaires "liste de choix"'
@@ -214,9 +215,9 @@ eng:
         #>professions: 'Professions'
         #>purchase_order_lines: 'Lignes d''achat'
         #>purchase_orders: 'Achats'
-        #>purchase_payment_modes: 'Modes de règlements d''achat'
-        #>purchase_payment_parts: 'Parties de règlements d''achat'
-        #>purchase_payments: 'Règlements d''achat'
+        #>purchase_payment_modes: 'Modes de paiements'
+        #>purchase_payment_parts: 'Parties de paiements'
+        #>purchase_payments: 'Paiements'
         #>roles: 'Rôles'
         #>sale_order_lines: 'Lignes de vente'
         #>sale_order_natures: 'Types de vente'
@@ -252,8 +253,8 @@ eng:
         updated_at: 'Updated at'
         updater: 'Updater'
         updater_id: 'Updater'
-        #>usable_purchase_payments: 'Règlements d''achats utilisables'
-        #>usable_sale_payments: 'Règlements de vente utilisables'
+        #>usable_purchase_payments: 'Paiements utilisables'
+        #>usable_sale_payments: 'Règlements utilisables'
         #>users: 'Utilisateurs'
       complement:
         #>active: 'Actif'
@@ -361,7 +362,7 @@ eng:
       currency:
         #>active: 'Actif'
         #>by_default: 'Par défaut'
-        #>cashes: 'Comptes de trésorerie'
+        #>cashes: 'Trésoreries'
         #>code: 'Code'
         comment: 'Comment'
         company: 'Company'
@@ -580,8 +581,8 @@ eng:
         #>journal_records: 'Pièces comptables'
         lock_version: 'Version'
         #>locked: 'Verrouillé'
-        #>mode: 'Type de paiement'
-        #>mode_id: 'Type de paiement'
+        #>mode: 'Type de règlement'
+        #>mode_id: 'Type de règlement'
         #>number: 'Numéro'
         #>payments: 'Règlements'
         #>payments_count: 'Nb. règlements'
@@ -591,8 +592,9 @@ eng:
       entity:
         #>active: 'Actif'
         #>activity_code: 'Code d''activité'
-        #>attorney: '(((ATTORNEY)))'
-        #>attorney_account_id: '(((ATTORNEY_ACCOUNT_ID)))'
+        #>attorney: 'Mandataire'
+        #>attorney_account: 'Compte mandataire associé'
+        #>attorney_account_id: 'Compte mandataire associé'
         #>authorized_payments_count: 'Nombre de règlements autorisés'
         #>born_on: 'Date de naissance'
         #>cashes: 'Comptes bancaires'
@@ -639,8 +641,8 @@ eng:
         #>nature_id: 'Type'
         #>observations: 'Observations'
         #>origin: 'Lieu de la première rencontre'
-        #>payment_delay: 'Délai de paiement'
-        #>payment_delay_id: 'Délai de paiement'
+        #>payment_delay: 'Délai de règlement'
+        #>payment_delay_id: 'Délai de règlement'
         #>payment_mode: 'Mode de règlement'
         #>payment_mode_id: 'Mode de règlement'
         #>photo: 'Photo'
@@ -649,7 +651,7 @@ eng:
         #>proposer_id: 'Parrain'
         #>prospect: 'Prospect'
         #>purchase_orders: 'Achats'
-        #>purchase_payments: 'Règlements d''achat'
+        #>purchase_payments: 'Paiements'
         #>reduction_rate: 'Taux de réduction'
         #>reflation_submissive: 'Soumis à la relance'
         #>responsible: 'Responsable'
@@ -668,7 +670,7 @@ eng:
         updated_at: 'Updated at'
         updater: 'Updater'
         updater_id: 'Updater'
-        #>usable_sale_payments: 'Règlements de vente utilisables'
+        #>usable_sale_payments: 'Règlements utilisables'
         #>vat_number: 'Numéro de TVA intra-communautaire'
         #>vat_submissive: 'Soumis à la TVA'
         #>webpass: 'Mot de passe web'
@@ -886,6 +888,7 @@ eng:
         #>downpayment_amount: 'Montant de l''acompte'
         #>has_downpayment: 'A un acompte'
         id: 'ID'
+        #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
         #>lines: 'Lignes de facture'
         lock_version: 'Version'
@@ -895,9 +898,10 @@ eng:
         #>origin: 'Facture d''origine'
         #>origin_id: 'Facture d''origine'
         #>paid: 'Réglée'
-        #>payment_delay: 'Délai de paiement'
-        #>payment_delay_id: 'Délai de paiement'
+        #>payment_delay: 'Délai de règlement'
+        #>payment_delay_id: 'Délai de règlement'
         #>payment_on: 'A régler au plus tard le'
+        #>products: 'Produits'
         #>sale_order: 'Vente'
         #>sale_order_id: 'Vente'
         updated_at: 'Updated at'
@@ -1016,8 +1020,8 @@ eng:
         #>number: 'Numéro'
         #>position: 'Position'
         #>printed_on: 'Datée du'
-        #>purchase_payment_parts: 'Parties de règlement d''achat'
-        #>purchase_payments: 'Règlements d''achat'
+        #>purchase_payment_parts: 'Parties de paiement'
+        #>purchase_payments: 'Paiements'
         #>resource: 'Origine'
         #>resource_id: 'Origine'
         #>resource_type: 'Origine'
@@ -1331,6 +1335,7 @@ eng:
         #>manage_stocks: 'Gérer les stocks'
         name: 'Name'
         #>nature: 'Nature'
+        #>nature_label: 'Nature'
         #>number: 'Numéro'
         #>price: 'Prix de revient'
         #>prices: 'Prix'
@@ -1364,6 +1369,7 @@ eng:
         updater: 'Updater'
         updater_id: 'Updater'
         #>weight: 'Poids (kg)'
+        #>with_tracking: '(((WITH_TRACKING)))'
       product_component:
         #>active: 'Actif'
         comment: 'Comment'
@@ -1419,6 +1425,7 @@ eng:
         #>dest_contact: 'Adresse de livraison'
         #>dest_contact_id: 'Adresse de livraison'
         id: 'ID'
+        #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
         #>label: 'Commande'
         #>lines: 'Lignes d''achat'
@@ -1429,6 +1436,7 @@ eng:
         #>payee: 'Bénéficiaire'
         #>payment_parts: 'Parties de règlement'
         #>planned_on: 'Réception prévue le'
+        #>products: 'Produits'
         quantity: 'Quantity'
         #>received: 'Reçue'
         #>shipped: 'Reçu'
@@ -1498,14 +1506,13 @@ eng:
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
       purchase_payment_mode:
-        #>cash: 'Compte de trésorerie'
-        #>cash_id: 'Compte de trésorerie'
+        #>cash: 'Trésorerie'
+        #>cash_id: 'Trésorerie'
         #>company: 'Société'
         #>company_id: 'Société'
         #>created_at: 'Créé le'
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
-        #>draft_mode: 'Mode brouillard'
         #>id: 'ID'
         #>lock_version: 'Version'
         #>name: 'Nom'
@@ -1515,7 +1522,7 @@ eng:
         #>updater_id: 'Modificateur'
         #>with_accounting: 'Comptabiliser les règlements'
       purchase_payment_part:
-        #>accounted_at: '(((ACCOUNTED_AT)))'
+        #>accounted_at: 'Comptabilisé(e) le'
         #>amount: 'Montant'
         #>company: 'Société'
         #>company_id: 'Société'
@@ -1595,8 +1602,8 @@ eng:
         #>number: 'Numéro'
         #>parts_amount: 'Montant payé'
         #>payer: 'Payeur'
-        #>payment_delay: 'Délai de paiement'
-        #>payment_delay_id: 'Délai de paiement'
+        #>payment_delay: 'Délai de règlement'
+        #>payment_delay_id: 'Délai de règlement'
         #>payment_parts: 'Parties de règlement'
         #>responsible: 'Responsable'
         #>responsible_id: 'Responsable'
@@ -1673,8 +1680,8 @@ eng:
         id: 'ID'
         lock_version: 'Version'
         name: 'Name'
-        #>payment_delay: 'Délai de paiement'
-        #>payment_delay_id: 'Délai de paiement'
+        #>payment_delay: 'Délai de règlement'
+        #>payment_delay_id: 'Délai de règlement'
         #>payment_mode: 'Mode de règlement'
         #>payment_mode_complement: 'Complément d''information sur le mode règlement'
         #>payment_mode_id: 'Mode de règlement'
@@ -1702,8 +1709,8 @@ eng:
         #>journal_record: 'Pièces comptables'
         #>journal_record_id: 'Pièce comptable'
         lock_version: 'Version'
-        #>mode: 'Mode de paiement'
-        #>mode_id: 'Mode de paiement'
+        #>mode: 'Mode de règlement'
+        #>mode_id: 'Mode de règlement'
         #>number: 'Numéro'
         #>paid_on: 'Réglé le'
         #>parts: 'Parties de règlement'
@@ -1720,10 +1727,8 @@ eng:
         updater: 'Updater'
         updater_id: 'Updater'
       sale_payment_mode:
-        #>account: 'Compte d''attente pour les règlements à encaisser'
-        #>account_id: 'Compte d''attente pour les règlements à encaisser'
-        #>cash: 'Compte de trésorerie utilisé'
-        #>cash_id: 'Compte de trésorerie utilisé'
+        #>cash: 'Trésorerie utilisé'
+        #>cash_id: 'Trésorerie utilisé'
         #>commission_account: 'Compte à utiliser pour la commission'
         #>commission_account_id: 'Compte à utiliser pour la commission'
         #>commission_amount: 'Montant fixe de la commission'
@@ -1733,10 +1738,9 @@ eng:
         created_at: 'Created at'
         creator: 'Creator'
         creator_id: 'Creator'
-        #>draft_mode: 'Mode brouillard'
         #>embankable_payments: 'Règlements encaissables'
-        #>embankables_account: '(((EMBANKABLES_ACCOUNT)))'
-        #>embankables_account_id: '(((EMBANKABLES_ACCOUNT_ID)))'
+        #>embankables_account: 'Compte d''attente pour les règlements à encaisser'
+        #>embankables_account_id: 'Compte d''attente pour les règlements à encaisser'
         #>entities: 'Personnes'
         id: 'ID'
         lock_version: 'Version'
@@ -1750,7 +1754,7 @@ eng:
         #>with_commission: 'Inclure une commission'
         #>with_embankment: 'Utiliser les remises en banque'
       sale_payment_part:
-        #>accounted_at: '(((ACCOUNTED_AT)))'
+        #>accounted_at: 'Comptabilisé(e) le'
         #>amount: 'Montant attribué à la vente'
         company: 'Company'
         company_id: 'Company'
@@ -1767,7 +1771,7 @@ eng:
         lock_version: 'Version'
         #>payment: 'Règlement'
         #>payment_id: 'Règlement'
-        #>payment_way: 'Moyen de paiement'
+        #>payment_way: 'Mode de règlement'
         updated_at: 'Updated at'
         updater: 'Updater'
         updater_id: 'Updater'
@@ -1953,6 +1957,7 @@ eng:
         quantity: 'Quantity'
         #>sale_order: 'Vente'
         #>sale_order_id: 'Vente'
+        #>sale_order_line_id: 'Ligne de vente'
         #>start: 'Début'
         #>started_on: 'Débuté le'
         #>stopped_on: 'Arrété le'
@@ -2007,7 +2012,7 @@ eng:
         updater: 'Updater'
         updater_id: 'Updater'
       tax_declaration:
-        #>accounted_at: '(((ACCOUNTED_AT)))'
+        #>accounted_at: 'Comptabilisé(e) le'
         #>acquisition_amount: 'Montant des acquisition'
         #>address: 'Adresse du service destinataire'
         #>amount: 'TVA totale'
@@ -2293,7 +2298,7 @@ eng:
           #>error_no_found_price: 'Aucun prix n'' a pu être trouvé pour ce produit et cette liste de tarif'
           #>location_can_not_transfer_product: 'Le produit {{product}} ne peut être sorti du réservoir {{location}}, celui-ci contient {{contained_product}}.'
         stock:
-          #>product_cannot_be_in_location: 'Le produit ne peu pas être stocké dans le réservoir {{location}}'
+          #>product_cannot_be_in_location: 'Le produit ne peut pas être stocké dans le réservoir {{location}}'
         stock_transfer:
           #>location_can_not_receive_product: 'Le lieu de stockage {{location}} ne peut recevoir le produit {{product}}, il contient déjà le produit {{contained_product}}'
           #>location_can_not_transfer_product: 'Vous ne pouvez pas tranférer le produit {{product}} depuis le lieu de stockage {{location}}, celui-ci contient le produit {{contained_product}}'
@@ -2315,7 +2320,7 @@ eng:
       #>account_balance: 'Balance de compte'
       #>area: 'Zone postale'
       #>bank_statement: 'Relevé de compte bancaire'
-      #>cash: 'Compte de trésorerie'
+      #>cash: 'Trésorerie'
       company: 'Company'
       #>complement: 'Champ complémentaire'
       #>complement_choice: 'Choix de champ complémentaire'
@@ -2363,16 +2368,16 @@ eng:
       #>profession: 'Profession'
       #>purchase_order: 'Achat'
       #>purchase_order_line: 'Ligne d''achat'
-      #>purchase_payment: 'Règlement d''achat'
-      #>purchase_payment_mode: 'Mode de règlement d''achat'
-      #>purchase_payment_part: 'Partie de règlement d''achat'
+      #>purchase_payment: 'Paiement'
+      #>purchase_payment_mode: 'Mode de paiement'
+      #>purchase_payment_part: 'Affectation de paiement'
       #>role: 'Rôle'
       #>sale_order: 'Vente'
       #>sale_order_line: 'Ligne de vente'
       #>sale_order_nature: 'Type de vente'
       #>sale_payment: 'Règlement'
       #>sale_payment_mode: 'Mode de règlement'
-      #>sale_payment_part: 'Partie de règlement'
+      #>sale_payment_part: 'Affectation de règlement'
       #>sequence: 'Séquence'
       #>shape: 'Îlot'
       #>shelf: 'Catégorie de produit'
@@ -2443,9 +2448,9 @@ eng:
       #>profession: 'Professions'
       #>purchase_order: 'Achats'
       #>purchase_order_line: 'Lignes d''achat'
-      #>purchase_payment: 'Règlements d''achat'
-      #>purchase_payment_mode: 'Modes de règlement d''achat'
-      #>purchase_payment_part: 'Parties de règlement d''achat'
+      #>purchase_payment: 'Paiements'
+      #>purchase_payment_mode: 'Modes de paiement'
+      #>purchase_payment_part: 'Parties de paiement'
       role: 'Roles'
       #>sale_order: 'Ventes'
       #>sale_order_line: 'Lignes de vente'
