--- a/config/locales/fra/activerecord.yml
+++ b/config/locales/fra/activerecord.yml
@@ -144,16 +144,16 @@ fra:
       profession: 'Profession'
       purchase_order: 'Achat'
       purchase_order_line: 'Ligne d''achat'
-      purchase_payment: 'Règlement d''achat'
-      purchase_payment_mode: 'Mode de règlement d''achat'
-      purchase_payment_part: 'Partie de règlement d''achat'
+      purchase_payment: 'Paiement'
+      purchase_payment_mode: 'Mode de paiement'
+      purchase_payment_part: 'Affectation de paiement'
       role: 'Rôle'
       sale_order: 'Vente'
       sale_order_line: 'Ligne de vente'
       sale_order_nature: 'Type de vente'
       sale_payment: 'Règlement'
       sale_payment_mode: 'Mode de règlement'
-      sale_payment_part: 'Partie de règlement'
+      sale_payment_part: 'Affectation de règlement'
       sequence: 'Séquence'
       shape: 'Îlot'
       shelf: 'Catégorie de produit'
@@ -225,9 +225,9 @@ fra:
       profession: 'Professions'
       purchase_order: 'Achats'
       purchase_order_line: 'Lignes d''achat'
-      purchase_payment: 'Règlements d''achat'
-      purchase_payment_mode: 'Modes de règlement d''achat'
-      purchase_payment_part: 'Parties de règlement d''achat'
+      purchase_payment: 'Paiements'
+      purchase_payment_mode: 'Modes de paiement'
+      purchase_payment_part: 'Parties de paiement'
       role: 'Rôles'
       sale_order: 'Ventes'
       sale_order_line: 'Lignes de vente'
@@ -289,8 +289,8 @@ fra:
         lock_version: 'Version'
         name: 'Nom'
         number: 'Numéro'
-        payment_modes: 'Modes de règlement'
-        payments: 'Règlements'
+        payment_modes: 'Modes de règlement' #?
+        payments: 'Règlements' #?
         products: 'Produits'
         purchase_order_lines: 'Lignes d''achat'
         updated_at: 'Mis à jour le'
@@ -411,6 +411,7 @@ fra:
         account_balances: 'Balances de compte'
         accounts: 'Comptes'
         areas: 'Zones postales'
+        attorney_accounts: (((ATTORNEY_ACCOUNTS)))
         available_prices: 'Prix disponibles'
         available_products: 'Produits disponibles'
         bank_journals: 'Journaux de banque'
@@ -488,9 +489,9 @@ fra:
         professions: 'Professions'
         purchase_order_lines: 'Lignes d''achat'
         purchase_orders: 'Achats'
-        purchase_payment_modes: 'Modes de règlements d''achat'
-        purchase_payment_parts: 'Parties de règlements d''achat'
-        purchase_payments: 'Règlements d''achat'
+        purchase_payment_modes: 'Modes de paiements'
+        purchase_payment_parts: 'Parties de paiements'
+        purchase_payments: 'Paiements'
         roles: 'Rôles'
         sale_order_lines: 'Lignes de vente'
         sale_order_natures: 'Types de vente'
@@ -526,8 +527,8 @@ fra:
         updated_at: 'Mis à jour le'
         updater: 'Modificateur'
         updater_id: 'Modificateur'
-        usable_purchase_payments: 'Règlements d''achats utilisables'
-        usable_sale_payments: 'Règlements de vente utilisables'
+        usable_purchase_payments: 'Paiements utilisables'
+        usable_sale_payments: 'Règlements utilisables'
         users: 'Utilisateurs'
 
       # Champ complémentaire
@@ -881,8 +882,8 @@ fra:
         journal_records: 'Pièces comptables'
         lock_version: 'Version'
         locked: 'Verrouillé'
-        mode: 'Type de paiement'
-        mode_id: 'Type de paiement'
+        mode: 'Type de règlement'
+        mode_id: 'Type de règlement'
         number: 'Numéro'
         payments: 'Règlements'
         payments_count: 'Nb. règlements'
@@ -894,8 +895,9 @@ fra:
       entity:
         active: 'Actif'
         activity_code: 'Code d''activité'
-        attorney: Mandataire
-        attorney_account_id: Compte mandataire associé
+        attorney: 'Mandataire'
+        attorney_account: 'Compte mandataire associé'
+        attorney_account_id: 'Compte mandataire associé'
         authorized_payments_count: 'Nombre de règlements autorisés'
         born_on: 'Date de naissance'
         cashes: 'Comptes bancaires'
@@ -942,8 +944,8 @@ fra:
         nature_id: 'Type'
         observations: 'Observations'
         origin: 'Lieu de la première rencontre'
-        payment_delay: 'Délai de paiement'
-        payment_delay_id: 'Délai de paiement'
+        payment_delay: 'Délai de règlement'
+        payment_delay_id: 'Délai de règlement'
         payment_mode: 'Mode de règlement'
         payment_mode_id: 'Mode de règlement'
         photo: 'Photo'
@@ -952,7 +954,7 @@ fra:
         proposer_id: 'Parrain'
         prospect: 'Prospect'
         purchase_orders: 'Achats'
-        purchase_payments: 'Règlements d''achat'
+        purchase_payments: 'Paiements'
         reduction_rate: 'Taux de réduction'
         reflation_submissive: 'Soumis à la relance'
         responsible: 'Responsable'
@@ -971,7 +973,7 @@ fra:
         updated_at: 'Mis à jour le'
         updater: 'Modificateur'
         updater_id: 'Modificateur'
-        usable_sale_payments: 'Règlements de vente utilisables'
+        usable_sale_payments: 'Règlements utilisables'
         vat_number: 'Numéro de TVA intra-communautaire'
         vat_submissive: 'Soumis à la TVA'
         webpass: 'Mot de passe web'
@@ -1210,6 +1212,7 @@ fra:
         downpayment_amount: 'Montant de l''acompte'
         has_downpayment: 'A un acompte'
         id: 'ID'
+        journal_record: 'Pièce comptable'
         journal_record_id: 'Pièce comptable'
         lines: 'Lignes de facture'
         lock_version: 'Version'
@@ -1219,9 +1222,10 @@ fra:
         origin: 'Facture d''origine'
         origin_id: 'Facture d''origine'
         paid: 'Réglée'
-        payment_delay: 'Délai de paiement'
-        payment_delay_id: 'Délai de paiement'
+        payment_delay: 'Délai de règlement'
+        payment_delay_id: 'Délai de règlement'
         payment_on: 'A régler au plus tard le'
+        products: 'Produits'
         sale_order: 'Vente'
         sale_order_id: 'Vente'
         updated_at: 'Mis à jour le'
@@ -1347,8 +1351,8 @@ fra:
         number: 'Numéro'
         position: 'Position'
         printed_on: 'Datée du'
-        purchase_payment_parts: 'Parties de règlement d''achat'
-        purchase_payments: 'Règlements d''achat'
+        purchase_payment_parts: 'Parties de paiement'
+        purchase_payments: 'Paiements'
         resource: 'Origine'
         resource_id: 'Origine'
         resource_type: 'Origine'
@@ -1720,6 +1724,7 @@ fra:
         updater: 'Modificateur'
         updater_id: 'Modificateur'
         weight: 'Poids (kg)'
+        with_tracking: (((WITH_TRACKING)))
 
       # Composant de produit
       product_component:
@@ -1781,6 +1786,7 @@ fra:
         dest_contact: 'Adresse de livraison'
         dest_contact_id: 'Adresse de livraison'
         id: 'ID'
+        journal_record: 'Pièce comptable'
         journal_record_id: 'Pièce comptable'
         label: 'Commande'
         lines: 'Lignes d''achat'
@@ -1791,6 +1797,7 @@ fra:
         payee: 'Bénéficiaire'
         payment_parts: 'Parties de règlement'
         planned_on: 'Réception prévue le'
+        products: 'Produits'
         quantity: 'Quantité'
         received: 'Reçue' #?
         shipped: 'Reçu'
@@ -1833,7 +1840,7 @@ fra:
         updater: 'Modificateur'
         updater_id: 'Modificateur'
 
-      # Règlement d'achat
+      # Paiement
       purchase_payment:
         accounted_at: 'Comptabilisé à'
         amount: 'Montant'
@@ -1864,7 +1871,7 @@ fra:
         updater: 'Modificateur'
         updater_id: 'Modificateur'
 
-      # Mode de règlement d'achat
+      # Mode de paiement
       purchase_payment_mode:
         cash: 'Trésorerie'
         cash_id: 'Trésorerie'
@@ -1882,9 +1889,9 @@ fra:
         updater_id: 'Modificateur'
         with_accounting: 'Comptabiliser les règlements'
 
-      # Partie de règlement d'achat
+      # Affectation de paiement
       purchase_payment_part:
-        accounted_at: Comptabilisé(e) le
+        accounted_at: 'Comptabilisé(e) le'
         amount: 'Montant'
         company: 'Société'
         company_id: 'Société'
@@ -1968,8 +1975,8 @@ fra:
         number: 'Numéro'
         parts_amount: 'Montant payé'
         payer: 'Payeur'
-        payment_delay: 'Délai de paiement'
-        payment_delay_id: 'Délai de paiement'
+        payment_delay: 'Délai de règlement'
+        payment_delay_id: 'Délai de règlement'
         payment_parts: 'Parties de règlement'
         responsible: 'Responsable'
         responsible_id: 'Responsable'
@@ -2050,8 +2057,8 @@ fra:
         id: 'ID'
         lock_version: 'Version'
         name: 'Nom'
-        payment_delay: 'Délai de paiement'
-        payment_delay_id: 'Délai de paiement'
+        payment_delay: 'Délai de règlement'
+        payment_delay_id: 'Délai de règlement'
         payment_mode: 'Mode de règlement'
         payment_mode_complement: 'Complément d''information sur le mode règlement'
         payment_mode_id: 'Mode de règlement'
@@ -2081,8 +2088,8 @@ fra:
         journal_record: 'Pièces comptables'
         journal_record_id: 'Pièce comptable'
         lock_version: 'Version'
-        mode: 'Mode de paiement'
-        mode_id: 'Mode de paiement'
+        mode: 'Mode de règlement'
+        mode_id: 'Mode de règlement'
         number: 'Numéro'
         paid_on: 'Réglé le'
         parts: 'Parties de règlement'
@@ -2101,8 +2108,6 @@ fra:
 
       # Mode de règlement
       sale_payment_mode:
-        embankables_account: 'Compte d''attente pour les règlements à encaisser' #?
-        embankables_account_id: 'Compte d''attente pour les règlements à encaisser' #?
         cash: 'Trésorerie utilisé'
         cash_id: 'Trésorerie utilisé'
         commission_account: 'Compte à utiliser pour la commission'
@@ -2115,6 +2120,8 @@ fra:
         creator: 'Créateur'
         creator_id: 'Créateur'
         embankable_payments: 'Règlements encaissables'
+        embankables_account: 'Compte d''attente pour les règlements à encaisser'
+        embankables_account_id: 'Compte d''attente pour les règlements à encaisser'
         entities: 'Personnes'
         id: 'ID'
         lock_version: 'Version'
@@ -2128,9 +2135,9 @@ fra:
         with_commission: 'Inclure une commission'
         with_embankment: 'Utiliser les remises en banque'
 
-      # Partie de règlement
+      # Affectation de règlement
       sale_payment_part:
-        accounted_at: Comptabilisé(e) le
+        accounted_at: 'Comptabilisé(e) le'
         amount: 'Montant attribué à la vente'
         company: 'Société'
         company_id: 'Société'
@@ -2147,7 +2154,7 @@ fra:
         lock_version: 'Version'
         payment: 'Règlement'
         payment_id: 'Règlement'
-        payment_way: 'Moyen de paiement'
+        payment_way: 'Mode de règlement'
         updated_at: 'Mis à jour le'
         updater: 'Modificateur'
         updater_id: 'Modificateur'
@@ -2347,6 +2354,7 @@ fra:
         quantity: 'Quantité'
         sale_order: 'Vente'
         sale_order_id: 'Vente'
+        sale_order_line_id: 'Ligne de vente'
         start: 'Début'
         started_on: 'Débuté le'
         stopped_on: 'Arrété le'
@@ -2406,7 +2414,7 @@ fra:
 
       # Déclaration de taxes
       tax_declaration:
-        accounted_at: Comptabilisé(e) le
+        accounted_at: 'Comptabilisé(e) le'
         acquisition_amount: 'Montant des acquisition'
         address: 'Adresse du service destinataire'
         amount: 'TVA totale'
