--- a/config/locales/jpn/activerecord.yml
+++ b/config/locales/jpn/activerecord.yml
@@ -135,6 +135,7 @@ jpn:
         #>account_balances: 'Balances de compte'
         #>accounts: 'Comptes'
         #>areas: 'Zones postales'
+        #>attorney_accounts: '(((ATTORNEY_ACCOUNTS)))'
         #>available_prices: 'Prix disponibles'
         #>available_products: 'Produits disponibles'
         #>bank_journals: 'Journaux de banque'
@@ -142,7 +143,7 @@ jpn:
         #>banks_accounts: 'Comptes comptables de banque'
         #>born_on: 'Créée le'
         #>cash_journals: 'Journaux de caisse'
-        #>cashes: 'Comptes de trésorerie'
+        #>cashes: 'Trésoreries'
         #>cashes_accounts: 'Comptes de caisse'
         #>charges_accounts: 'Comptes de charge'
         #>choice_complements: 'Chmaps complémentaires "liste de choix"'
@@ -212,9 +213,9 @@ jpn:
         #>professions: 'Professions'
         #>purchase_order_lines: 'Lignes d''achat'
         #>purchase_orders: 'Achats'
-        #>purchase_payment_modes: 'Modes de règlements d''achat'
-        #>purchase_payment_parts: 'Parties de règlements d''achat'
-        #>purchase_payments: 'Règlements d''achat'
+        #>purchase_payment_modes: 'Modes de paiements'
+        #>purchase_payment_parts: 'Parties de paiements'
+        #>purchase_payments: 'Paiements'
         #>roles: 'Rôles'
         #>sale_order_lines: 'Lignes de vente'
         #>sale_order_natures: 'Types de vente'
@@ -250,8 +251,8 @@ jpn:
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
         updater_id: '修正の人'
-        #>usable_purchase_payments: 'Règlements d''achats utilisables'
-        #>usable_sale_payments: 'Règlements de vente utilisables'
+        #>usable_purchase_payments: 'Paiements utilisables'
+        #>usable_sale_payments: 'Règlements utilisables'
         #>users: 'Utilisateurs'
       complement:
         #>active: 'Actif'
@@ -358,7 +359,7 @@ jpn:
       currency:
         #>active: 'Actif'
         #>by_default: 'Par défaut'
-        #>cashes: 'Comptes de trésorerie'
+        #>cashes: 'Trésoreries'
         code: 'コード'
         comment: 'メモ'
         company: '会社'
@@ -577,8 +578,8 @@ jpn:
         #>journal_records: 'Pièces comptables'
         lock_version: '修正の番号'
         #>locked: 'Verrouillé'
-        #>mode: 'Type de paiement'
-        #>mode_id: 'Type de paiement'
+        #>mode: 'Type de règlement'
+        #>mode_id: 'Type de règlement'
         number: '番号'
         #>payments: 'Règlements'
         #>payments_count: 'Nb. règlements'
@@ -588,8 +589,9 @@ jpn:
       entity:
         #>active: 'Actif'
         #>activity_code: 'Code d''activité'
-        #>attorney: '(((ATTORNEY)))'
-        #>attorney_account_id: '(((ATTORNEY_ACCOUNT_ID)))'
+        #>attorney: 'Mandataire'
+        #>attorney_account: 'Compte mandataire associé'
+        #>attorney_account_id: 'Compte mandataire associé'
         #>authorized_payments_count: 'Nombre de règlements autorisés'
         #>born_on: 'Date de naissance'
         #>cashes: 'Comptes bancaires'
@@ -636,8 +638,8 @@ jpn:
         #>nature_id: 'Type'
         #>observations: 'Observations'
         #>origin: 'Lieu de la première rencontre'
-        #>payment_delay: 'Délai de paiement'
-        #>payment_delay_id: 'Délai de paiement'
+        #>payment_delay: 'Délai de règlement'
+        #>payment_delay_id: 'Délai de règlement'
         #>payment_mode: 'Mode de règlement'
         #>payment_mode_id: 'Mode de règlement'
         #>photo: 'Photo'
@@ -646,7 +648,7 @@ jpn:
         #>proposer_id: 'Parrain'
         #>prospect: 'Prospect'
         #>purchase_orders: 'Achats'
-        #>purchase_payments: 'Règlements d''achat'
+        #>purchase_payments: 'Paiements'
         #>reduction_rate: 'Taux de réduction'
         #>reflation_submissive: 'Soumis à la relance'
         #>responsible: 'Responsable'
@@ -665,7 +667,7 @@ jpn:
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
         updater_id: '修正の人'
-        #>usable_sale_payments: 'Règlements de vente utilisables'
+        #>usable_sale_payments: 'Règlements utilisables'
         #>vat_number: 'Numéro de TVA intra-communautaire'
         #>vat_submissive: 'Soumis à la TVA'
         #>webpass: 'Mot de passe web'
@@ -882,6 +884,7 @@ jpn:
         #>downpayment_amount: 'Montant de l''acompte'
         #>has_downpayment: 'A un acompte'
         id: '唯一の番号'
+        #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
         #>lines: 'Lignes de facture'
         lock_version: '修正の番号'
@@ -891,9 +894,10 @@ jpn:
         #>origin: 'Facture d''origine'
         #>origin_id: 'Facture d''origine'
         #>paid: 'Réglée'
-        #>payment_delay: 'Délai de paiement'
-        #>payment_delay_id: 'Délai de paiement'
+        #>payment_delay: 'Délai de règlement'
+        #>payment_delay_id: 'Délai de règlement'
         #>payment_on: 'A régler au plus tard le'
+        #>products: 'Produits'
         #>sale_order: 'Vente'
         #>sale_order_id: 'Vente'
         #>updated_at: 'Mis à jour le'
@@ -1011,8 +1015,8 @@ jpn:
         number: '番号'
         #>position: 'Position'
         #>printed_on: 'Datée du'
-        #>purchase_payment_parts: 'Parties de règlement d''achat'
-        #>purchase_payments: 'Règlements d''achat'
+        #>purchase_payment_parts: 'Parties de paiement'
+        #>purchase_payments: 'Paiements'
         #>resource: 'Origine'
         #>resource_id: 'Origine'
         #>resource_type: 'Origine'
@@ -1326,6 +1330,7 @@ jpn:
         #>manage_stocks: 'Gérer les stocks'
         name: '名前'
         #>nature: 'Nature'
+        #>nature_label: 'Nature'
         number: '番号'
         #>price: 'Prix de revient'
         #>prices: 'Prix'
@@ -1359,6 +1364,7 @@ jpn:
         updater: '修正の人'
         updater_id: '修正の人'
         #>weight: 'Poids (kg)'
+        #>with_tracking: '(((WITH_TRACKING)))'
       product_component:
         #>active: 'Actif'
         comment: 'メモ'
@@ -1414,6 +1420,7 @@ jpn:
         #>dest_contact: 'Adresse de livraison'
         #>dest_contact_id: 'Adresse de livraison'
         id: '唯一の番号'
+        #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
         #>label: 'Commande'
         #>lines: 'Lignes d''achat'
@@ -1424,6 +1431,7 @@ jpn:
         #>payee: 'Bénéficiaire'
         #>payment_parts: 'Parties de règlement'
         #>planned_on: 'Réception prévue le'
+        #>products: 'Produits'
         #>quantity: 'Quantité'
         #>received: 'Reçue'
         #>shipped: 'Reçu'
@@ -1493,14 +1501,13 @@ jpn:
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
       purchase_payment_mode:
-        #>cash: 'Compte de trésorerie'
-        #>cash_id: 'Compte de trésorerie'
+        #>cash: 'Trésorerie'
+        #>cash_id: 'Trésorerie'
         #>company: 'Société'
         #>company_id: 'Société'
         #>created_at: 'Créé le'
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
-        #>draft_mode: 'Mode brouillard'
         #>id: 'ID'
         #>lock_version: 'Version'
         #>name: 'Nom'
@@ -1510,7 +1517,7 @@ jpn:
         #>updater_id: 'Modificateur'
         #>with_accounting: 'Comptabiliser les règlements'
       purchase_payment_part:
-        #>accounted_at: '(((ACCOUNTED_AT)))'
+        #>accounted_at: 'Comptabilisé(e) le'
         #>amount: 'Montant'
         #>company: 'Société'
         #>company_id: 'Société'
@@ -1590,8 +1597,8 @@ jpn:
         number: '番号'
         #>parts_amount: 'Montant payé'
         #>payer: 'Payeur'
-        #>payment_delay: 'Délai de paiement'
-        #>payment_delay_id: 'Délai de paiement'
+        #>payment_delay: 'Délai de règlement'
+        #>payment_delay_id: 'Délai de règlement'
         #>payment_parts: 'Parties de règlement'
         #>responsible: 'Responsable'
         #>responsible_id: 'Responsable'
@@ -1668,8 +1675,8 @@ jpn:
         id: '唯一の番号'
         lock_version: '修正の番号'
         name: '名前'
-        #>payment_delay: 'Délai de paiement'
-        #>payment_delay_id: 'Délai de paiement'
+        #>payment_delay: 'Délai de règlement'
+        #>payment_delay_id: 'Délai de règlement'
         #>payment_mode: 'Mode de règlement'
         #>payment_mode_complement: 'Complément d''information sur le mode règlement'
         #>payment_mode_id: 'Mode de règlement'
@@ -1697,8 +1704,8 @@ jpn:
         #>journal_record: 'Pièces comptables'
         #>journal_record_id: 'Pièce comptable'
         lock_version: '修正の番号'
-        #>mode: 'Mode de paiement'
-        #>mode_id: 'Mode de paiement'
+        #>mode: 'Mode de règlement'
+        #>mode_id: 'Mode de règlement'
         number: '番号'
         #>paid_on: 'Réglé le'
         #>parts: 'Parties de règlement'
@@ -1715,10 +1722,8 @@ jpn:
         updater: '修正の人'
         updater_id: '修正の人'
       sale_payment_mode:
-        #>account: 'Compte d''attente pour les règlements à encaisser'
-        #>account_id: 'Compte d''attente pour les règlements à encaisser'
-        #>cash: 'Compte de trésorerie utilisé'
-        #>cash_id: 'Compte de trésorerie utilisé'
+        #>cash: 'Trésorerie utilisé'
+        #>cash_id: 'Trésorerie utilisé'
         #>commission_account: 'Compte à utiliser pour la commission'
         #>commission_account_id: 'Compte à utiliser pour la commission'
         #>commission_amount: 'Montant fixe de la commission'
@@ -1728,10 +1733,9 @@ jpn:
         #>created_at: 'Créé le'
         creator: '創始者'
         creator_id: '創始者'
-        #>draft_mode: 'Mode brouillard'
         #>embankable_payments: 'Règlements encaissables'
-        #>embankables_account: '(((EMBANKABLES_ACCOUNT)))'
-        #>embankables_account_id: '(((EMBANKABLES_ACCOUNT_ID)))'
+        #>embankables_account: 'Compte d''attente pour les règlements à encaisser'
+        #>embankables_account_id: 'Compte d''attente pour les règlements à encaisser'
         #>entities: 'Personnes'
         id: '唯一の番号'
         lock_version: '修正の番号'
@@ -1745,7 +1749,7 @@ jpn:
         #>with_commission: 'Inclure une commission'
         #>with_embankment: 'Utiliser les remises en banque'
       sale_payment_part:
-        #>accounted_at: '(((ACCOUNTED_AT)))'
+        #>accounted_at: 'Comptabilisé(e) le'
         #>amount: 'Montant attribué à la vente'
         company: '会社'
         company_id: '会社'
@@ -1762,7 +1766,7 @@ jpn:
         lock_version: '修正の番号'
         #>payment: 'Règlement'
         #>payment_id: 'Règlement'
-        #>payment_way: 'Moyen de paiement'
+        #>payment_way: 'Mode de règlement'
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
         updater_id: '修正の人'
@@ -1948,6 +1952,7 @@ jpn:
         #>quantity: 'Quantité'
         #>sale_order: 'Vente'
         #>sale_order_id: 'Vente'
+        #>sale_order_line_id: 'Ligne de vente'
         #>start: 'Début'
         #>started_on: 'Débuté le'
         #>stopped_on: 'Arrété le'
@@ -2001,7 +2006,7 @@ jpn:
         updater: '修正の人'
         updater_id: '修正の人'
       tax_declaration:
-        #>accounted_at: '(((ACCOUNTED_AT)))'
+        #>accounted_at: 'Comptabilisé(e) le'
         #>acquisition_amount: 'Montant des acquisition'
         #>address: 'Adresse du service destinataire'
         #>amount: 'TVA totale'
@@ -2286,7 +2291,7 @@ jpn:
           #>error_no_found_price: 'Aucun prix n'' a pu être trouvé pour ce produit et cette liste de tarif'
           #>location_can_not_transfer_product: 'Le produit {{product}} ne peut être sorti du réservoir {{location}}, celui-ci contient {{contained_product}}.'
         stock:
-          #>product_cannot_be_in_location: 'Le produit ne peu pas être stocké dans le réservoir {{location}}'
+          #>product_cannot_be_in_location: 'Le produit ne peut pas être stocké dans le réservoir {{location}}'
         stock_transfer:
           #>location_can_not_receive_product: 'Le lieu de stockage {{location}} ne peut recevoir le produit {{product}}, il contient déjà le produit {{contained_product}}'
           #>location_can_not_transfer_product: 'Vous ne pouvez pas tranférer le produit {{product}} depuis le lieu de stockage {{location}}, celui-ci contient le produit {{contained_product}}'
@@ -2308,7 +2313,7 @@ jpn:
       #>account_balance: 'Balance de compte'
       #>area: 'Zone postale'
       #>bank_statement: 'Relevé de compte bancaire'
-      #>cash: 'Compte de trésorerie'
+      #>cash: 'Trésorerie'
       company: '会社'
       #>complement: 'Champ complémentaire'
       #>complement_choice: 'Choix de champ complémentaire'
@@ -2356,16 +2361,16 @@ jpn:
       #>profession: 'Profession'
       #>purchase_order: 'Achat'
       #>purchase_order_line: 'Ligne d''achat'
-      #>purchase_payment: 'Règlement d''achat'
-      #>purchase_payment_mode: 'Mode de règlement d''achat'
-      #>purchase_payment_part: 'Partie de règlement d''achat'
+      #>purchase_payment: 'Paiement'
+      #>purchase_payment_mode: 'Mode de paiement'
+      #>purchase_payment_part: 'Affectation de paiement'
       #>role: 'Rôle'
       #>sale_order: 'Vente'
       #>sale_order_line: 'Ligne de vente'
       #>sale_order_nature: 'Type de vente'
       #>sale_payment: 'Règlement'
       #>sale_payment_mode: 'Mode de règlement'
-      #>sale_payment_part: 'Partie de règlement'
+      #>sale_payment_part: 'Affectation de règlement'
       #>sequence: 'Séquence'
       #>shape: 'Îlot'
       #>shelf: 'Catégorie de produit'
@@ -2436,9 +2441,9 @@ jpn:
       #>profession: 'Professions'
       #>purchase_order: 'Achats'
       #>purchase_order_line: 'Lignes d''achat'
-      #>purchase_payment: 'Règlements d''achat'
-      #>purchase_payment_mode: 'Modes de règlement d''achat'
-      #>purchase_payment_part: 'Parties de règlement d''achat'
+      #>purchase_payment: 'Paiements'
+      #>purchase_payment_mode: 'Modes de paiement'
+      #>purchase_payment_part: 'Parties de paiement'
       #>role: 'Rôles'
       #>sale_order: 'Ventes'
       #>sale_order_line: 'Lignes de vente'
